syntax = "proto3";

package data;

option go_package = "./product;product";

service ProductService {
  rpc GetByID (GetByIDRequest) returns (GetByIDResponse);
}

message GetByIDRequest {
  int32 id = 1;
}

message GetByIDResponse {
  string name = 1;
  float price = 2;
  string image = 3;
}